dstack/gateway/src/main_service/snapshots/dstack_gateway__main_service__tests__config-3.snap
---
source: gateway/src/main_service/tests.rs
assertion_line: 34
expression: wg_config
snapshot_kind: text
---
[Interface]
PrivateKey = 
ListenPort = 51820


[Peer]
PublicKey = dGVzdC1wdWJrZXktMHRlc3QtcHVia2V5LTB0ZXN0LXA=
AllowedIPs = 10.0.0.2/32
PersistentKeepalive = 25

[Peer]
PublicKey = dGVzdC1wdWJrZXktMXRlc3QtcHVia2V5LTF0ZXN0LXA=
AllowedIPs = 10.0.0.3/32
PersistentKeepalive = 25
