dstack/gateway/src/main_service/snapshots/dstack_gateway__main_service__tests__config.snap
---
source: gateway/src/main_service/tests.rs
assertion_line: 65
expression: info
---
InstanceInfo {
    id: "test-id-0",
    app_id: "app-id-0",
    ip: 10.0.0.2,
    public_key: "dGVzdC1wdWJrZXktMHRlc3QtcHVia2V5LTB0ZXN0LXA=",
    reg_time: SystemTime {
        tv_sec: 0,
        tv_nsec: 0,
    },
    port_policy: None,
    port_policy_hash: "",
    admin_port_policy: None,
    admin_ready: None,
    connections: 0,
}
