dstack/gateway/src/main_service/snapshots/dstack_gateway__main_service__tests__empty_config.snap
---
source: gateway/src/main_service/tests.rs
assertion_line: 14
expression: wg_config
snapshot_kind: text
---
[Interface]
PrivateKey = 
ListenPort = 51820
